--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,6 +81,7 @@ android {
 
 
 dependencies {
+    implementation 'com.google.maps.android:android-maps-utils:2.3.0'
     implementation 'com.firebaseui:firebase-ui-database:8.0.0'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation fileTree(dir: 'lib', includes: ['*.jar'])
