--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,6 +75,7 @@
              "YOUR_API_KEY" string in this file with "${MAPS_API_KEY}".
         -->
         <activity android:name=".Activity_Form" />
+        <activity android:name=".activity_form_view" />
 
         <activity
             android:name=".profileActivity"
