19-03-2025 - Thêm CHAT BOT AI, fix bug Google Maps

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,8 @@
             android:name=".reportActivity"
             android:theme="@style/AppThemeNo1"
             android:exported="false" />
+        <activity android:name=".ChatBotAIActivity" />
+
         <activity
             android:name=".SplashActivity"
             android:exported="false"
