--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'com.google.gms.google-services'
+    id 'org.jetbrains.kotlin.android'
 }
 
 android {
@@ -27,12 +28,12 @@ android {
         kotlinCompilerExtensionVersion '1.4.0'
     }
     namespace 'com.example.save_food'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.example.save_food"
         minSdk 21
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -66,6 +67,9 @@ android {
     buildFeatures {
         viewBinding true
     }
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -81,12 +85,20 @@ android {
 
 
 dependencies {
-        implementation 'com.google.maps.android:android-maps-utils:2.3.0'
+    implementation("com.squareup.okhttp3:logging-interceptor:4.11.0")
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.8.7'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.9.10'
+    implementation 'com.google.ai.client.generativeai:generativeai:0.9.0'
+    implementation 'com.google.maps.android:android-maps-utils:2.3.0'
     implementation 'com.firebaseui:firebase-ui-database:8.0.0'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation fileTree(dir: 'lib', includes: ['*.jar'])
     implementation 'com.facebook.android:facebook-android-sdk:[8,9)'
-    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'com.google.android.gms:play-services-location:21.2.0'
     implementation 'androidx.navigation:navigation-ui:2.5.3'
     implementation 'androidx.activity:activity:1.3.0'
@@ -107,6 +119,7 @@ dependencies {
     implementation("com.google.firebase:firebase-messaging")
     implementation("com.google.firebase:firebase-analytics")
     implementation(platform("com.google.firebase:firebase-bom:32.2.2"))
+    implementation 'com.google.ai.client.generativeai:common:0.10.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
     implementation 'com.github.bumptech.glide:glide:4.14.2'
     implementation 'com.google.firebase:firebase-storage:20.3.0'
