--- a/build.gradle
+++ b/build.gradle
@@ -1,29 +1,31 @@
 buildscript {
     ext {
+        kotlin_version = '1.7.10'
         compose_version = '1.3.3'
     }
     repositories {
         gradlePluginPortal()
         google()
         mavenCentral()
-        maven { url 'https://jitpack.io'}
-        jcenter()
-        maven { url 'https://maven.google.com/'
-            name 'Google' }
+        maven { url 'https://jitpack.io' }
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
     dependencies {
-
-        classpath 'com.google.gms:google-services:4.3.15'
-        classpath 'com.android.tools.build:gradle:7.0.4'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.android.tools.build:gradle:8.3.0'
+        classpath 'com.google.gms:google-services:4.4.2'
     }
+}
 
-}// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.2.2' apply false
     id 'com.android.library' version '7.2.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
 }
 
-task clean(type: Delete) {
+tasks.register('clean', Delete) {
     delete rootProject.buildDir
 }
