--- a/app/build.gradle
+++ b/app/build.gradle
@@ -150,3 +150,4 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
 }
+apply plugin: 'com.google.gms.google-services'
